@@ -70,6 +70,9 @@ module StateMachine
     #   vehicle = Vehicle.create(:state_event => 'ignite')  # => #<Vehicle id=1 name=nil state="idling">
     #   vehicle.state                                       # => "idling"
     # 
+    # This technique is always used for transitioning states when the +save+
+    # action (which is the default) is configured for the machine.
+    # 
     # === Security implications
     # 
     # Beware that public event attributes mean that events can be fired
@@ -139,6 +142,10 @@ module StateMachine
     #       ...
     #     end
     #   end
+    # 
+    # If using the +save+ action for the machine, this option will be ignored as
+    # the transaction behavior will depend on the +save+ implementation within
+    # DataMapper.
     # 
     # == Validation errors
     # 
